--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="style.css" rel="stylesheet">
   <meta charset="utf-8">
   <title>Game Time</title>
 </head>
 <body>
+
+<canvas id="game"
+        class="game-canvas"
+        width="1200"
+        height="650"
+</canvas>
 
   <script src="main.bundle.js"></script>
 </body>
