trying now to add the up and down keys for the paddle to move vertically

--- a/db_test-file/test.html
+++ b/db_test-file/test.html
@@ -6,13 +6,13 @@
     <title>Gamedev Canvas Workshop</title>
     <style>
     	* { padding: 0; margin: 0; }
-      canvas, img { display:block; margin:1em auto; border:1px solid black; }
+      canvas, img { display:block; margin:1em auto; border:1px solid yellow; border-radius: 10px;}
     	canvas {background-image:url(burlesque.jpg)}
     </style>
 </head>
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<canvas id="myCanvas" width="1000" height="650"></canvas>
 
 <script type='text/javascript' src='test.js'>
 </script>
