troubleshooting drawing the paddle. gonna switch over to the ball and see if I can get that to work

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 
-<canvas id="game"
-        class="game-canvas"
-        width="1000"
-        height="650"
+<canvas id="game" class="game-canvas" width="1000" height="650" background-color='#ffffff'>
 </canvas>
 
   <script src="main.bundle.js"></script>
