--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<canvas id="game" class="game-canvas" width="1000" height="650" background-color='#ffffff'>
+<canvas id="game" class="game-canvas" width="900" height="600">
 </canvas>
 
   <script src="main.bundle.js"></script>
