started on title page. need to change branches though

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <section>
+    <h1>
+    </h1>
+    <p>
+    </p>
+    <button name="button" value="OK" type="button" onclick="load-game()">Play the Game!</button>
+    </button>
+  </section>
   <canvas id="game"
           class="game-canvas"
           width="650"
