--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
   <meta charset="utf-8">
   <title>Breakout</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Indie+Flower|VT323" rel="stylesheet">
+
+
 </head>
 <body>
 
   <section class="window-load-page">
-    <h1 class="intro">Welcome to the Game. Sharpen your teeth, grind your grits and don't be a bitch about it!</h1>
-    <p class="to-play">To play our fantastic game, Mythical BreakOut, click on the button below.</p>
-    <button id="start-game" type="button">Play the Game!</button>
+    <h1 class="base-style intro"><h1 class="base-style welcome">Welcome to Mythical BreakOut</h1>
+    <h2 class="base-style">Sharpen your <em>teeth</em>, grind your grits and don't be a bitch about it!</h2>
+    <p class="base-style to-play">To play our fantastic game, Mythical BreakOut, click on the button below.</p>
+    <button class="base-style btn-style" id="start-game" type="button">Play the Game!</button>
     </button>
   </section>
 
   <section id="game-over">
-    <h1>Either you won the game or you lost. It doesn't matter because no one cares. Go home and cry about it.</h1>
-    <p>If you like emotional disambiguity, press the botton and play again!</p>
-    <button id='replay-game' type="button">Replay the Game!</button>
+    <h1 style="base-style">Either you won the game or you lost. It doesn't matter because no one cares. Go home and <em>cry</em> about it.</h1>
+    <p class="base-style">If you like emotional disambiguity, press the botton and play again!</p>
+    <button class="base-style btn-style" id='replay-game' type="button">Replay the Game!</button>
   </section>
 
   <section id="game-wrapper">
